Small spelling errors fixed in style.css, made modal and search button visible in index.html, fixed errors in index.js but still working on adding new article edits

--- a/public/style.css
+++ b/public/style.css
@@ -4,8 +4,6 @@ font-family: 'Roboto', sans-serif;
 body{
   font-family: Roboto, sans-serif;
   margin: 0;
-
-
 }
 
 a{
@@ -19,7 +17,7 @@ a{
   background-color: #fff;
   font-size: 18px;
   line-height: 22px;
-  z-index: 2;
+  /*z-index: 2;*/
 
 }
 
@@ -71,8 +69,8 @@ a:hover, a:focus{
 .article-container{
   margin-left: 170px;
   display: flex;
-  position: fixed;
-  z-index: 4;
+  /*position: fixed;*/
+  /*z-index: 4;*/
 
   padding: 1em;
   flex-wrap: wrap;
@@ -137,7 +135,7 @@ a:hover, a:focus{
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 1000;
+  z-index:  1000;
   background-color: rgba(0, 0, 0, 0.85);
 }
 
@@ -147,7 +145,7 @@ a:hover, a:focus{
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 1010;
+  z-index: 1100;
   overflow: scroll;
 }
 
@@ -279,8 +277,4 @@ a:hover, a:focus{
 
 #logo{
   /*background-image: url("images/Logo.jpg");*/
-}
-
-.hidden{
-  display: none;
 }
